--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
-.env
-config.json
+# Python Byte-code and Compilation
+# --------------------------------
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+# Virtual Environment Folders
+# ---------------------------
+venv/
+.venv/
+env/
+
+# Editor and IDE Files (Adjust based on your IDE)
+# ---------------------------------------------
+.vscode/
+.idea/
+*.swp
+*~
+Thumbs.db
+.DS_Store
+
+# Logs and Temporary Files
+# ------------------------
+*.log
+tmp/
+
+# Sensitive Data (Crucial for Security - DO NOT COMMIT API Keys)
+# This is mainly for local development. Since you use GitHub Secrets, 
+# you might not have these files locally, but it is good practice to include them.
+# --------------------------------------------------------------------------------
+.env 
+config.ini
+secrets.py
